<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/test_text"
            android:textColor="@color/accent"
            android:textSize="@dimen/League"
            android:id="@+id/league_textview"
            android:contentDescription="@string/league_description"
            android:fontFamily="sans-serif-light" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/test_text"
            android:textSize="@dimen/League"
            android:textColor="@color/accent"
            android:id="@+id/matchday_textview"
            android:contentDescription="@string/matchday_description"
            android:fontFamily="sans-serif-light" />
    </LinearLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/share_text"
                android:id="@+id/share_button"
                android:drawableLeft="@drawable/abc_ic_menu_share_mtrl_alpha"
                android:drawableStart="@drawable/abc_ic_menu_share_mtrl_alpha"
                android:paddingLeft="60dp"
                android:paddingRight="60dp"
                android:paddingStart="60dp"
                android:paddingEnd="60dp"
                android:contentDescription="@string/share_description"
                android:textColor="@android:color/white"
                android:theme="@style/AppTheme" />
    </FrameLayout>

</LinearLayout>