<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@android:color/white"
    app:cardCornerRadius="4dp"
    app:cardElevation="4dp"
    app:contentPadding="8dp"
    app:cardPreventCornerOverlap="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal" android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:scaleType="fitCenter"
                    android:id="@+id/home_crest"
                    android:contentDescription="@string/home_crest_description"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="@dimen/TeamNames"
                    android:gravity="center"
                    android:text="@string/test_text"
                    android:id="@+id/home_name"
                    android:contentDescription="@string/home_name_description"/>
            </LinearLayout>

            <!-- Got rid of nested weights which might impact performance -->

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_gravity="center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/test_text"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textSize="@dimen/Score"
                    android:id="@+id/score_textview"
                    android:textColor="?colorPrimary"
                    android:contentDescription="@string/score_description"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/test_text"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:id="@+id/data_textview"
                    android:contentDescription="@string/data_description"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:scaleType="fitCenter"
                    android:id="@+id/away_crest"
                    android:contentDescription="@string/away_crest_description"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/test_text"
                    android:textSize="@dimen/TeamNames"
                    android:id="@+id/away_name"
                    android:contentDescription="@string/away_name_description"/>
            </LinearLayout>
        </LinearLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/details_fragment_container">
        </FrameLayout>

    </LinearLayout>


</android.support.v7.widget.CardView>


